Zmieniono pierwszą cześć wstępu

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -20,6 +20,27 @@
   year = { }
 }
 
+@online{ilosc_urzadzen,
+  author = {VRcompare},
+  title = {{VR Devices}},
+  howpublished = "\newline \url{https://vr-compare.com}",
+  year = { }
+}
+
+@online{liczba_gier_quest,
+  author = {Ben Lang},
+  title = {{Quest App Lab Soars to 1,440 Apps, More Than Tripling Those on the Main Store}},
+  howpublished = "\newline \url{https://www.roadtovr.com/oculus-quest-app-lab-100-apps-best-rated-most-popular/}",
+  year = { }
+}
+
+@online{liczba_gier_steam,
+  author = {Valve},
+  title = {{Steam VR Game List}},
+  howpublished = "\newline \url{https://store.steampowered.com/vr}",
+  year = { }
+}
+
 @online{sprzedasz_gogli_VR,
   author = {IDC},
   title = {{AR/VR Headset Shipments Grew Dramatically in 2021}},
