--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -139,36 +139,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \subsection{Wprowadzenie}
 
-W pewnych aspektach życia człowiek zastanawia się nad paroma rzeczami, czy nie
-jesteśmy sami w kosmosie, kiedy nastąpi koniec, czy VR umarł, czy nie jesteśmy
-programem komputerowym. Pewnie nie poznamy odpowiedzi na te wszystkie
-pytania, jeszcze przez jakiś czas, ale dzisiaj jedno jest pewne. VR na pewno jeszcze
-nie umarł i ma się całkiem dobrze. W ciągu ostatnich kilku lat rynek gogli VR zaczął
-na nowo się rozwijać, powstało wiele gogli, a do najpopularniejszych z nich należą:
-PlayStation VR, Valve Index, HTC Vive Pro \cite{popularnosc_gogli}. Każde z tych gogli ma jednak wady, a
-do najważniejszych należy to, że nie są to sprzęty typu plug and play. Trzeba się nie
-tylko męczyć z splątaniną przewodów, ale także gogle jak np. Valve Index wymagają
-stacji, dzięki którym gogle wiedzą gdzie znajdujesz się przestrzeni 3D. Kolejnym
-problemem jest oczywiście cena samego sprzętu który w większości przekracza
-ponad 3000 PLN za całość. Jedynie co się z tego zestawu różni to PlayStation VR,
-same są jednak przestarzałe, a Sony zapowiedziało ich następcę którego premiera
-nastąpi pod koniec 2022 roku \cite{PlayStation_VR2}. Same gogle Sony nie rozwiązały dla mnie
-największego problemu, czyli obowiązek podłączenia przewodem, jednakże ten
-problem na szczęście rozwiązała już inna firma, mowa oczywiście o Oculus znaną
-obecnie jako Reality Labs, jedna z podfirm Facebooka obecnie znana jako Meta. Firma zaczęła
-sprzedawać w 2019 gogle Oculus Quest, które były rewolucyjne z jednego ważnego
-powodu, były autonomiczne, tzn. nie potrzebowały komputera do obsługi gogli,
-ponieważ wystarczą do tego same gogle z kontrolerami ruchowymi. Same gogle nie
-potrzebowały też stacji do określania położenia gogli, gdyż same w sobie mają diody
-podczerwone które do tego służą. Oculus Quest okazał się dość rewolucyjnym
-sprzętem wartym ok. 2000 pln za wersję podstawową, a rok później Oculus wypuścił
-następcę za którego zapłaciliśmy jeszcze mniej czyli ok. 1500 pln w wersji
-podstawowej. Nie odbyło się to bez kompromisów takich jak: Brak płynnej zmiany
-rozstawu soczewek dla oczu, gorszej jakości pasek na głowę, brak magnetycznego
-zabezpieczenia pojemnika na baterię. To nie znaczy oczywiścię, że gogle były
-gorszę a do najważniejszych należą: Zwiększona roździelość obrazu dla jednego
-oka, zmiana procesora na wydajniejszy, wydłużony czas pracy kontrolerów na jednej
-baterii \cite{porownanie_gogli}. 
+W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki jednemu z ojców założycieli firmy Oculus, Palmer Luckey. Wieku 16 lat zaczął budować swoje pierwsze gogle VR, a kilka lat później założył firmę Oculus i dzięki udanej zbiórce na Kickstarterze jego firma miała fundusze stworzyć swoje pierwsze sklepowe gogle. Po drodze firma wypuściła kilka prototypów dla deweloperów. Sama firma została przejęta przez Facebooka, dzisiaj znana jako Meta, za 2 miliardy dolarów w 2014 roku. Ich pierwsze komercyjne gogle, Oculus Rift, zostały wydane w 2016 roku i kosztowały na start 599\$. W 2017 roku z firmą pożegnał się Palmer Luckey, a obecnie zajmuję się firmą tworzącą technologię obronne. Natomiast kolejnymi komercyjnymi goglami Oculusa był Oculus Go wydanym w 2018 roku i kosztujące 199\$ za wersję z 32GB pamięci wbudowanej lub 249\$ za wersję z 64GB. Były to gogle all-in-one, czyli nie wymagały zewnętrznego sprzętu do działania. Rok później zostały wydane dwa nowe rodzaje gogli. Pierwszym był następca Oculusa Rifta, Oculus Rift S kosztującym 400\$. Drugimi goglami był natomiast następca Oculus Go, Oculus Quest, kosztujący na start 399\$ za wersję 64GB i 499\$ za wersję 128GB. Quest był dużą rewolucją dla firmy zaczynając od tego, że dzięki możliwości podłączenia gogli do PC, zaczęły one wypychać Oculus Rift S, a Facebook zaczął na ten moment tworzyć tylko gogle autonomiczne. 
 
 \begin{figure}[!ht]%
 	\centering
@@ -181,34 +152,51 @@ baterii \cite{porownanie_gogli}.
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=0.8\linewidth]{graphics/oculusquest2.png}
-		\caption{Oculus Quest 2}
+		\caption{Meta Quest 2}
 		\label{ref:subref_b}
 	\end{subfigure}%
 	
 
-\caption{Gogle VR od Oculusa}
+\caption{Gogle VR od Reality Labs}
 \label{ref:ref}
 \end{figure}
 
-Quest 2 wśród gogli VR okazał się dużym sukcesem, w roku 2021
-sprzedanych zostało 11,2 miliona sztuk urządzeń z czego 78\% to były Oculus Quest
-2 \cite{Sprzedasz_gogli_VR}. Rynek aplikacji też się rozwinął w ciągu ostatnich lat. Na samego Oculusa Questa
-w oficjalnym sklepie jest obecnie dostępnych ponad 300 aplikacji, na Steam jest ich
-już ponad 2000. Oczywiście wśród nich nie znajdują się same gry, ponieważ gogle
-mogą być wykorzystane też np. do zaprezentowania ciała człowieka, być platformą
-do rysowania obrazów, lub sprzętem do relaksu czy oglądania filmów. Ja chciałem
-spróbować swoich sił w stworzeniu małego projektu, który mógłby być wykorzystany
-do pokazywania co ciekawego można robić w komputerze, czyli galerii modelów
-komputerowych.
+
+W kolejnym roku, tj. 2020 wypuścili kolejne gogle Oculus Quest 2 w cenie 299\$ za
+wersje 64GB i 400\$ za wersję 256GB. Dzięki konkurencyjnej cenie i możliwością
+jakie dawał Quest 2 stały się najpopularniejszymi goglami na rynku. W ciągu
+ostatnich dwóch lat Oculus zmienił nazwę na Reality Labs, Facebook na Meta, a
+Oculus Quest 2 na Meta Quest 2. Obecnie Meta jest firmą próbującą stworzyć swój 
+pierwszy metavers. W ostatnich tygodniach wypuścili też gogle z myślą o 
+zastosowaniach biznesowym i dla metaversum, Meta Quest Pro, kosztujące 1500\$. Same 
+gogle Meta nie są jedyne na rynku. Podczas boomu na rynku VR w 2016 zostały wydane 
+też inne gogle konkurencyjnych firm. Do największych należą HTC Vive, gogle wydane 
+przez HTC we współpracy z firmą Valve, jako główny konkurent Oculus Rifta, bo też 
+były tworzone z myślą o rynku PC. Kolejnymi goglami jest PlayStation VR, były to 
+gogle stworzone przez firmę Sony na ich konsolę PlayStation4. W latach 2016-2022 
+powstała co najmniej setka nowych gogli VR różnych firm, z czego największą 
+popularnością są rozwiązania od Mety\cite{popularnosc_gogli}. W 2021 roku zostało 
+sprzedanych 11 milionów sztuk urządzeń. Z czego 78\% były to Meta Quest 
+2\cite{ilosc_urzadzen}.
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.8\columnwidth]{graphics/OpenBrush.png}
-\caption{OpenBrush
+\includegraphics[width=0.8\columnwidth]{graphics/BeatSaber.jpg}
+\caption{Przykład gry stworzonej z myślą o VR Beat Saber
 \label{OpenBrush}}%
 %
 \qquad
 \end{figure}  
+
+
+Rynek aplikacji z myślą o VR też się rozwinął w ciągu ostatnich lat. Firmy takie, 
+jak Epic czy Unity dodały do swoich silników wsparcie dla najpopularniejszych gogli 
+na rynku. Dzięki wparciu od dużych firm rozpoczął się wysyp aplikacji na gogle VR. W 
+oficjalnym sklepie Oculus jest obecnie dostępnych ponad 400 
+aplikacji\cite{liczba_gier_quest}, na Steam jest ich
+już ponad 4000\cite{liczba_gier_steam}. Dzięki wsparciu Oculus Quest na silniku 
+Unreal Engine 4 uznałem, że spróbuję swoich sił i spróbuję stworzyć projekt, galerii 
+modelów komputerowych, zainspirowany zajęciami na uczelni.
 
 \subsection{Cel i zakres pracy}
 
